language-server/src/tests/snapshots/gleam_language_server__tests__action__convert_to_pipe_with_nested_calls_picks_the_innermost_one.snap
---
source: language-server/src/tests/action.rs
expression: "\nfn bug() {\n    wibble(Wobble(\n      field: woo(other_call(last))\n    ))\n}\n"
---
----- BEFORE ACTION

fn bug() {
    wibble(Wobble(
      field: woo(other_call(last))
             ↑                    
    ))
}


----- AFTER ACTION

fn bug() {
    wibble(Wobble(
      field: other_call(last) |> woo
    ))
}
