language-server/src/tests/snapshots/gleam_language_server__tests__action__convert_to_pipe_with_sum_adds_no_braces.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  wibble(1 + 1, waa)\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  wibble(1 + 1, waa)
  ↑                 
}


----- AFTER ACTION

pub fn main() {
  1 + 1 |> wibble(waa)
}
