language-server/src/tests/snapshots/gleam_language_server__tests__action__convert_to_pipe_works_in_anonymous_function_inside_a_pipeline.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  wibble |> wobble(fn() { woo(1) })\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  wibble |> wobble(fn() { woo(1) })
                          ↑        
}


----- AFTER ACTION

pub fn main() {
  wibble |> wobble(fn() { 1 |> woo })
}
