language-server/src/tests/snapshots/gleam_language_server__tests__action__convert_to_pipe_works_inside_body_of_use.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  use <- wibble(wobble)\n  woo(123)\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  use <- wibble(wobble)
  woo(123)
  ↑       
}


----- AFTER ACTION

pub fn main() {
  use <- wibble(wobble)
  123 |> woo
}
