language-server/src/tests/snapshots/gleam_language_server__tests__action__convert_to_regular_comment_no_affect_other_comment.snap
---
source: language-server/src/tests/action.rs
expression: "/// wibble\n\n/// wobble"
---
----- BEFORE ACTION
/// wibble
    ↑     

/// wobble


----- AFTER ACTION
// wibble

/// wobble
