language-server/src/tests/snapshots/gleam_language_server__tests__action__create_unknown_module_under_src.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport wibble/wobble\n\npub fn main() {\n  Nil\n}"
---
----- BEFORE ACTION

import wibble/wobble
              ↑     

pub fn main() {
  Nil
}


----- AFTER ACTION

----- FILE OPERATIONS -----
- Create /src/wibble/wobble.gleam
