language-server/src/tests/snapshots/gleam_language_server__tests__action__create_unknown_module_under_test.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport wobble/woo"
---
----- BEFORE ACTION

import wobble/woo
              ↑  


----- AFTER ACTION

----- FILE OPERATIONS -----
- Create /test/wobble/woo.gleam
